Реализован механизм динамической шапки

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
+    <ul>
+      <li>Пункт1</li>
+      <li>Пункт2</li>
+      <li>Пункт3</li>
+      <li>Пункт4</li>
+      <li>Пункт5</li>
+    </ul>
+  </header>
 </body>
 </html>
